# Bede

./: .gitignore  README.md  setup.cfg
bede/: __init__.py  bede.py
bede/interface/: __init__.py  menus.py
bede/interface/cli/: __init__.py  pages.py  parts.py
bede/pdf/: merge.py
bede/tagging/: __init__.py  classes.py
bede/utils/: __init__.py  _utils.py  classes.py
