[metadata]
name = Bede
version = 0.0.1
author = Sean Matthew Nolan
author_email = Sean.Matthew.Nolan@gmail.com
description = A small project to manage research documents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SeanMatthewNolan/bede
project_urls =
    Bug Tracker = https://github.com/SeanMatthewNolan/bede/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = bede
packages = find:
python_requires = >=3.9

install_requires =
    click
    blessed
    prompt_toolkit

[options.packages.find]
where = bede

[options.entry_points]
console_scripts =
    bede = bede:cli
    bede-gui = bede:gui
    bede-web = bede:web
    bede-pdf-merge = bede.bede:pdf_merge
